Added equations to the rate comparison view

--- a/reactions-app/Info.plist
+++ b/reactions-app/Info.plist
@@ -59,5 +59,9 @@
 	</array>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>RobotoSlab-VariableFont_wght.ttf</string>
+	</array>
 </dict>
 </plist>
