--- a/reactions-app.xcodeproj/xcshareddata/xcschemes/reactions-app.xcscheme
+++ b/reactions-app.xcodeproj/xcshareddata/xcschemes/reactions-app.xcscheme
@@ -62,7 +62,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "-FIRDebugEnabled"
+            argument = "-FIRDebugDisabled"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
