--- a/reactions-app.xcodeproj/xcshareddata/xcschemes/reactions-equilibrium.xcscheme
+++ b/reactions-app.xcodeproj/xcshareddata/xcschemes/reactions-equilibrium.xcscheme
@@ -78,6 +78,12 @@
             ReferencedContainer = "container:reactions-app.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
