--- a/reactions-app.xcodeproj/xcshareddata/xcschemes/reactions-equilibrium (Development).xcscheme
+++ b/reactions-app.xcodeproj/xcshareddata/xcschemes/reactions-equilibrium (Development).xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:reactions-app.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "575A88C725E43CD700AEE448"
+               BuildableName = "reactions-equilibriumTests.xctest"
+               BlueprintName = "reactions-equilibriumTests"
+               ReferencedContainer = "container:reactions-app.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -28,6 +42,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "575A88C725E43CD700AEE448"
+               BuildableName = "reactions-equilibriumTests.xctest"
+               BlueprintName = "reactions-equilibriumTests"
+               ReferencedContainer = "container:reactions-app.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
