--- a/reactions-app.xcodeproj/xcshareddata/xcschemes/reactions-equilibrium.xcscheme
+++ b/reactions-app.xcodeproj/xcshareddata/xcschemes/reactions-equilibrium.xcscheme
@@ -42,7 +42,7 @@
             buildForTesting = "YES"
             buildForRunning = "NO"
             buildForProfiling = "NO"
-            buildForArchiving = "YES"
+            buildForArchiving = "NO"
             buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
