--- a/reactions-app.xcodeproj/xcshareddata/xcschemes/acids-bases.xcscheme
+++ b/reactions-app.xcodeproj/xcshareddata/xcschemes/acids-bases.xcscheme
@@ -74,6 +74,12 @@
             ReferencedContainer = "container:reactions-app.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
