--- a/APChemistry/Info.plist
+++ b/APChemistry/Info.plist
@@ -67,6 +67,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Save the STEM badge to your photo library.</string>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
 </dict>
