--- a/reactions-app.xcodeproj/xcshareddata/xcschemes/APChemistry.xcscheme
+++ b/reactions-app.xcodeproj/xcshareddata/xcschemes/APChemistry.xcscheme
@@ -72,6 +72,9 @@
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
+      <StoreKitConfigurationFileReference
+         identifier = "../../storekit-config/USConfig.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
