--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 ## User settings
 xcuserdata/
-reactions-app.xcodeproj/xcuserdata/
+reactions-app.xcodeproj/xcuserdata/*/schemes/xcschememanagement.plist
 
 
 *.xccheckout
